--- a/.editorconfig
+++ b/.editorconfig
@@ -1,2 +1,7 @@
 [*.{kt,kts}]
-ktlint_code_style = intellij_idea
+max_line_length = 300
+ktlint_standard_filename = disabled
+ij_kotlin_allow_trailing_comma = true
+ij_kotlin_allow_trailing_comma_on_call_site = true
+ktlint_standard_string-template-indent = disabled
+ktlint_standard_multiline-expression-wrapping = disabled
